[gd_scene load_steps=4 format=3 uid="uid://n1oua6kpc7vf"]

[ext_resource type="Script" path="res://Escenas/Menu/MenuScripts/menu.gd" id="1_ri035"]
[ext_resource type="AudioStream" uid="uid://letuvurn1q1t" path="res://Arte/Musica/documentary-ambient-136114.mp3" id="2_tl8k8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85coi"]
bg_color = Color(0.654902, 0.603922, 0.333333, 0.423529)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ri035")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.212823, 0.545082, 0.503441, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -312.0
offset_top = -430.0
offset_right = 310.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 45

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_85coi")
text = "Jugar"

[node name="Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_85coi")
text = "Opciones"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_85coi")
text = "Salir"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_tl8k8")
autoplay = true

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
